--- a/resources.qrc
+++ b/resources.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/images">
         <file alias="menu">Resources/images/menu.png</file>
         <file alias="icon">Resources/images/icon.png</file>
-        <file alias="stone">Resources/images/stone.png</file>
+        <file alias="wall">Resources/images/wall.png</file>
         <file alias="ground">Resources/images/ground.png</file>
         <file alias="brick">Resources/images/brick.png</file>
         <file alias="button">Resources/images/button.png</file>
