Add Bombs to players

--- a/resources.qrc
+++ b/resources.qrc
@@ -8,6 +8,6 @@
         <file alias="button">Resources/images/button.png</file>
         <file alias="player1">Resources/images/player1.png</file>
         <file alias="player2">Resources/images/player2.png</file>
-        <file alias="bomb">Resources/gif/bomb.gif</file>
+        <file alias="bomb">Resources/images/bomb.png</file>
     </qresource>
 </RCC>
